<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- FRANCAIS -->
    <string name="app_name">PublicrowdFunding</string>
    <string name="login">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="creer_un_compte">Creer un compte</string>
    <string name="connexion">Connexion</string>
    <string name="image_cadenas">Clef secure</string>
    <string name="email">Adresse Email</string>
    <string name="go_inscription">Créer mon compte</string>
    <string name="project_name">Nom du projet</string>
    <string name="description_image_project">Illustration du projet</string>
    <string name="project_description">Description du projet</string>
    <string name="project_end_date">Date de fin</string>
    <string name="add_project">Soumettre un projet</string>
    <string name="description_image_button">Bouton image</string>
    <string name="valider">Valider</string>
    <string name="aucune_financement">0e</string>
    <string name="zero">0</string>
    <string name="no_days"> 0 jour</string>
    <string name="participants">participants</string>
    <string name="remain">Restant</string>
    <string name="funded">Récoltés</string>
    <string name="site_web">Site internet</string>
    <string name="telephone">Numéro de téléphone</string>
    <string name="confirmation_mdp">Confirmation du mot de passe</string>
    <string name="loading">Chargement en cours</string>
    <string name="no_project">Aucun projet</string>
    <string name="no_commentary">Aucun commentaire</string>
    <string name="login_or_register">Identifiez-vous</string>
    <string name="accomplish">Accompli</string>
    <string name="ask">Demandé</string>
    <string name="contribute">Contribuer à ce projet</string>
    <string name="amount_contribute">Montant en euro</string>
    <string name="success">Connexion réussie!</string>
    <string name="retrievePersonnelInfo">Nous récupérons vos données personnelles</string>
    <string name="distance">Distance : </string>
    <string name="error">Une erreur s\'est produite</string>
    <string name="male">Homme</string>
    <string name="female">Femme</string>
    <string name="comment">Commenter</string>
    <string name="comments">Commentaires</string>
    <string name="project_details">Détail du projet</string>
    <string name="project_location">Emplacement du projet</string>
    <string name="all_projects">Tout les projets</string>
    <string name="map_projects">Carte des projets</string>
    <string name="validate_projects">Valider des projets</string>
    <string name="preferences">Préférences</string>
    <string name="change_account">Changer de compte</string>
    <string name="logout">Déconnexion</string>
    <string name="authentication">Authentification</string>
    <string name="funding_progress">Progression du financement</string>
    <string name="sort_by">Trier par</string>
    <string name="biggest_project">Le plus gros</string>
    <string name="smallest_project">Le plus petit</string>
    <string name="most_avanced">Le plus avancé</string>
    <string name="closest">Le plus proche</string>
    <string name="user">Utilisateur</string>
    <string name="city">Ville</string>
    <string name="name">Nom</string>
    <string name="first_name">Prénom</string>
    <string name="your_city">Votre ville</string>
    <string name="your_name">Votre nom</string>
    <string name="your_first_name">Votre prénom</string>
    <string name="change_your_city">Modifier votre ville</string>
    <string name="change_your_name">Modifier votre nom</string>
    <string name="change_your_first_name">Modifier votre prénom</string>
    <string name="gender">Sexe</string>
    <string name="your_email">Votre Email</string>
    <string name="project_submitted">Projet soumis</string>
    <string name="bookmark">Favoris</string>
    <string name="change_your_email">Modifier votre Email</string>
    <string name="financed">Financé</string>
    <string name="register">S\'inscrire</string>
    <string name="days">%s jours</string>
        <string name="currency">%s €</string>

</resources>