<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="320dip"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/loading" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loadingLoadingInfo"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <ProgressBar
            android:id="@+id/progressBar1LoadingInfo"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView1LoadingInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/success"
            android:textColor="#45C63B"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/textView1LoadingInfoSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/retrievePersonnelInfo"
            android:textColor="#179CD5"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/connect_content"
        android:layout_width="320dip"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:gravity="center"
            android:text="@string/authentication"
            android:textSize="25sp" />

        <adullact.publicrowdfunding.views.SimpleLine
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/login_connexion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dip"
            android:ems="10"
            android:gravity="left|center_vertical"
            android:hint="@string/login"
            android:inputType="text"
            android:textColor="#808080"
            android:textSize="20sp" >
        </EditText>

        <EditText
            android:id="@+id/password_connexion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dip"
            android:ems="10"
            android:gravity="left|center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#808080"
            android:textSize="20sp" >
        </EditText>

        <Button
            android:id="@+id/valider_connexion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dip"
            android:background="@drawable/buttonshapes"
            android:gravity="center"
            android:text="@string/connexion" />

        <Button
            android:id="@+id/inscription_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dip"
            android:background="@drawable/buttonshapes"
            android:gravity="center"
            android:text="@string/creer_un_compte" />
    </LinearLayout>

</LinearLayout>