<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:clickable="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="320dip"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:gravity="center"
            android:text="@string/contribute"
            android:textSize="25sp" />

        <adullact.publicrowdfunding.custom.DrawLine
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/participation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/amount_contribute"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <CheckBox
            android:id="@+id/conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="J&apos;accepte les conditions d&apos;utilisations" />

        <Button
            android:id="@+id/valider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonshapes"
            android:gravity="center"
            android:text="@string/valider" />
    </LinearLayout>

</LinearLayout>