<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="10dip"
    android:paddingRight="10dip"
    android:paddingTop="5dip"
     android:paddingBottom="5dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshapes"
        android:orientation="vertical"
        android:padding="5dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginRight="6dip"
                android:contentDescription="@string/description_image_project"
                android:height="152dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/titre_projet_liste"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:text="@string/project_name"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/description_projet_liste"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:gravity="center_vertical"
            android:text="@string/project_description"
            android:textSize="15sp" />

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dip" >

                <TextView
                    android:id="@+id/sommeFund"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sommeeDemande"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nombre_jour_restant_detail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dip" >

                <TextView
                    android:id="@+id/recolter"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/funded"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ask"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/restant"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/remain"
                    android:textSize="15sp" />
            </TableRow>
        </TableLayout>

        <adullact.publicrowdfunding.views.CustomProgressBar
            android:id="@+id/avancement_projet_liste"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="fill_parent"
            android:layout_height="10dip"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:max="100"
            android:progress="100"
            android:progressDrawable="@drawable/progressbar" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>