<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="6dip"
        android:paddingRight="6dip"
        android:paddingTop="6dip" >

        <ImageView
            android:id="@+id/icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="6dip"
            android:contentDescription="@string/description_image_project"
            android:height="152dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshapes"
            android:orientation="vertical"
            android:layout_marginBottom="5dip"
            android:padding="6dip" >

            <TextView
                android:id="@+id/titre_projet_liste"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:text="@string/project_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description_projet_liste"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/project_description"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/temps_restant_projet_liste"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/till_day"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <adullact.publicrowdfunding.custom.CustomProgressBar
        android:id="@+id/avancement_projet_liste"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/progressbar" />

</LinearLayout>