<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/loading" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:id="@+id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        </FrameLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/connect"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_weight="0"
        android:background="@color/bleu"
        android:gravity="center"
        android:padding="0dp"
        android:weightSum="4" >

        <ImageButton
            android:id="@+id/button_filtrer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:background="@null"
            android:contentDescription="@string/description_image_button"
            android:src="@android:drawable/ic_menu_sort_by_size" />

        <ImageButton
            android:id="@+id/button_soumettre_projet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_toRightOf="@+id/button_filtrer"
            android:background="@null"
            android:contentDescription="@string/description_image_button"
            android:src="@android:drawable/ic_menu_add" />

        <ImageButton
            android:id="@+id/button_mon_compte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_toRightOf="@+id/button_soumettre_projet"
            android:background="@null"
            android:contentDescription="@string/description_image_button"
            android:src="@android:drawable/ic_menu_myplaces" />

        <ImageButton
            android:id="@+id/button_valider_projet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_toRightOf="@+id/button_mon_compte"
            android:background="@null"
            android:contentDescription="@string/description_image_button"
            android:src="@drawable/ic_menu_mark" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/disconnect"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_margin="5dp"
        android:layout_weight="0"
        android:gravity="center" >

        <Button
            android:id="@+id/connexion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshapes"
            android:gravity="center"
            android:padding="10dip"
            android:text="@string/login_or_register"
            android:textColor="#808080"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>